--- a/CompraComponentes/CompraComponentes/bin/CompraComponentes.dll.config
+++ b/CompraComponentes/CompraComponentes/bin/CompraComponentes.dll.config
@@ -9,7 +9,7 @@
       providerName="System.Data.SqlClient" />
 	  <add name="DAM2-EfrainHernandezSEIM" connectionString="Data Source=SEGUNDO150\SEGUNDO;Initial Catalog=DAM2-EfrainHernandez;Integrated Security=True"
       providerName="System.Data.SqlClient" />
-	  <add name ="DAM2-EfrainhernandezSPYRO" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\Users\eah\Desktop\ASP-AC\Proyecto\BD\DAM2-EfrainHernandez.mdf;Integrated Security=True;" 
+	  <add name ="DAM2-EfrainhernandezSPYRO" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\Users\eah\Desktop\ASP-AC\BD\DAM2-EfrainHernandez.mdf;Integrated Security=True;" 
 	  providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <system.web>
