--- a/CompraComponentes/Servicios/Servicios.csproj
+++ b/CompraComponentes/Servicios/Servicios.csproj
@@ -82,14 +82,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="IServicios.cs" />
+    <Compile Include="Loggin.cs" />
     <Compile Include="Servicios.svc.cs">
       <DependentUpon>Servicios.svc</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="App_Code\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <None Include="packages.config" />
     <None Include="Web.Debug.config">
